# Assignments

./: .gitignore  README.md
Assembly/: README.md  lanczos.cpp
Bash/IOS/: README.md  wedi.sh
C++/DistributedSystems/balance_reader/: Makefile  balance_reader.cpp
C++/IPK/filetransfer/: Makefile  client.cc  server.cc  test.sh
C++/IPK/webclient/: Makefile  webclient.cc
C++/ISA/ldapserver/: CMakeLists.txt  Makefile  README.md  asn1_types.h  ldap.cpp  ldap.h  ldap_ans1_parser.cpp  ldap_ans1_parser.h  ldap_filter.cpp  ldap_filter.h  ldap_protocol.h  myldap.cpp
C++/SFC/: CMakeLists.txt  Makefile  README.md  run.sh
C++/SFC/src/: activation_funcs.cpp  activation_funcs.h  exceptions.h  mnist_reader.cpp  mnist_reader.h  neuron.cpp  neuron.h  rbm.cpp  rbm_net.cpp  rbm_net.h
C/IJC/project_1/: Makefile  README.md  bit-array.h  eratosthenes.c  eratosthenes.h  error.c  error.h  ppm.c  ppm.h  prvocisla.c  steg-decode.c
C/IJC/project_2/: Makefile  README.md  hash_function.c  hash_function.h  htab_clear.c  htab_foreach.c  htab_init.c  htab_lookup.c  htab_remove.c  htab_stats.c  htable.h  io.c  io.h  tail.c  tail.h  wordcount.c  wordcount.cc
C/IOS/: Makefile  README.md  b_Hgen.c  b_Ogen.c  b_bond.c  b_init.c  b_output.c  buildh2o.h  h2o.c
Java/JavaProgramming/: README.md
PHP/IPP-JSN/: README.md  jsn.php  xmldoc.class.php
PHP/Web-Apps/: README.md
PHP/Web-Apps/lab_e-commerce/: account.php  basket.php  checkout.php  checkout_payment.php  checkout_submit.php  config.ini  index.php  login.php  logout.php  order_details.php  (+2 more)
Python/IPP-MKA/: README.md  fsa.py  mka.py
(+60 files in other folders)
